tests/neg/polymorphic-erased-functions-types.check
-- [E007] Type Mismatch Error: tests/neg/polymorphic-erased-functions-types.scala:3:28 ---------------------------------
3 |def t1a: [T] => T => Unit = [T] => (erased t: T) => () // error
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                            Found:    [T] => (erased t: T) => Unit
  |                            Required: [T] => (x$1: T) => Unit
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/polymorphic-erased-functions-types.scala:4:37 ---------------------------------
4 |def t1b: [T] => (erased T) => Unit = [T] => (t: T) => () // error
  |                                     ^^^^^^^^^^^^^^^^^^^
  |                                     Found:    [T] => (t: T) => Unit
  |                                     Required: [T] => (erased x$1: T) => Unit
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/polymorphic-erased-functions-types.scala:6:36 ---------------------------------
6 |def t2a: [T, U] => (T, U) => Unit = [T, U] => (t: T, erased u: U) => () // error
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                                    Found:    [T, U] => (t: T, erased u: U) => Unit
  |                                    Required: [T, U] => (x$1: T, x$2: U) => Unit
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/polymorphic-erased-functions-types.scala:7:43 ---------------------------------
7 |def t2b: [T, U] => (T, erased U) => Unit = [T, U] => (t: T, u: U) => () // error
  |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                                           Found:    [T, U] => (t: T, u: U) => Unit
  |                                           Required: [T, U] => (x$1: T, erased x$2: U) => Unit
  |
  | longer explanation available when compiling with `-explain`
